<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContactos1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tituloFormulario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        tools:ignore="TextSizeCheck"
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/descripcionFormulario"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/nombreMayus"
                android:textStyle="bold" />

            <EditText
                tools:ignore="Autofill"
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/nombreMinus"
                android:inputType="text"
                android:text="@string/nombreMinus"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/apellidoMayus"
                android:textStyle="bold" />

            <EditText
                tools:ignore="Autofill"
                android:id="@+id/etApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/apellidoMinus"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/telefonoMayus"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                    <EditText
                        tools:ignore="Autofill"
                        android:id="@+id/etTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:ems="10"
                        android:hint="@string/telefonoMinus"
                        android:inputType="phone"
                        android:minHeight="48dp"/>

                    <Spinner
                        android:id="@+id/spinnerTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minHeight="48dp"/>
                </LinearLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/emailMayus"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="-85dp"
                tools:layout_editor_absoluteY="466dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    tools:ignore="Autofill"
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="@string/emailMinus"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="481dp"
                    android:minHeight="48dp"/>

                <Spinner
                    android:id="@+id/spinnerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="48dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/direccionMayus"
                android:textStyle="bold" />

            <EditText
                tools:ignore="Autofill"
                android:id="@+id/etDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/direccionMinus"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="507dp"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fechaNacMayus"
                android:textStyle="bold" />

            <EditText
                tools:ignore="Autofill"
                android:id="@+id/etFechaNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/fechaNacMinus"
                android:inputType="date"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="557dp"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/continuar"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="560dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>